--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt-concat-in-order",
-  "description": "Concatenates files respecting dependencies.",
+  "description": "Concatenates files respecting declared, required dependencies order.",
   "version": "0.1.0",
   "homepage": "https://github.com/miensol/grunt-concat-in-order",
   "author": {
@@ -38,6 +38,11 @@
     "grunt": "~0.4.1"
   },
   "keywords": [
-    "gruntplugin"
+    "gruntplugin",
+    "concat",
+    "concat-in-order",
+    "topological sort",
+    "dependency tree",
+    "concat in order"
   ]
 }
