--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-concat-in-order",
   "description": "Concatenates files respecting declared, required dependencies order.",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "homepage": "https://github.com/miensol/grunt-concat-in-order",
   "author": {
     "name": "Piotr Mionskowski",
@@ -43,6 +43,8 @@
     "concat-in-order",
     "topological sort",
     "dependency tree",
-    "concat in order"
+    "concat in order",
+    "resolve file order",
+    "sort dependencies"
   ]
 }
