--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
   "dependencies": {},
   "devDependencies": {
     "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt": "~0.4.1"
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-nodeunit": "~0.4.0",
+    "grunt": ">=0.4.0"
   },
   "peerDependencies": {
     "grunt": ">=0.4.0"
